# TalkingHeads

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  FAQ.md  LICENSE  README.md  ai_detector.py  base_scraper.py  constants.py  get_and_check.py  handler.py  main.py  pyproject.toml  requirements.txt  setup.py  text_regenerator.py
.circleci/: config.yml
.github/workflows/: codecov.yml  codeql.yml
chatgpt_automation/: __init__.py  chatgpt_client.py  helpers.py  talking_heads.py  test.py
docs/: conf.py  index.rst  requirements.txt
docs/_static/: custom_style.css
docs/source/: talkingheads.model_library.rst  talkingheads.multiagent.rst  talkingheads.rst
docs/tutorial/: conversation.rst  features.md  features.rst  getting_started.rst  multiagent.rst
src/talkingheads/: __init__.py  base_browser.py  object_map.py  utils.py
src/talkingheads/model_library/: __init__.py  bard.py  base_browser.py  chatgpt.py  claude.py  copilot.py  gemini.py  huggingchat.py  lechat.py  pi.py  utils.py
src/talkingheads/multiagent/: __init__.py  conversation.py  multiagent.py
talkingheads/: __init__.py
talkingheads/model_library/: bard.py  base_browser.py  chatgpt.py  helpers.py  huggingchat.py
templates/: chat.html  home.html
tests/: generic.py  pytest.ini  test_01_chatgpt.py  test_02_claude.py  test_03_copilot.py  test_04_gemini.py  test_05_huggingchat.py  test_06_lechat.py  test_07_pi.py  test_08_multiagent.py  test_09_conversation.py  test_chatgpt.py  test_claude.py  test_copilot.py  test_huggingchat.py  test_pi.py  utils.py
tests/test_assets/: conversation_cfg.yaml  multiagent_cfg.yaml
