[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
authors = [
  { name="Ugur Sahin", email="ugorsahin@tutanota.de"},
]
name = "talkingheads"
description = "A library to communicate with AI assistants such as ChatGPT, Claude, Copilot, Gemini, HuggingChat, and Pi, and enabling multiagent interactions between them."
readme = "README.md"
requires-python = ">=3.8"
version = "0.5.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
   'selenium>=4.10.0',
   'undetected-chromedriver>=3.5.3',
   'pandas>=2.0.0',
   'easydict',
   'validators>=0.22.0',
   'filetype>=1.2.0',
   'emoji>=2.10.1',
   'PyYAML>6.0',
   'mergedeep>=1.3.4'
]

[project.urls]
Source = "https://github.com/ugorsahin/TalkingHeads"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
